syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "GrpcServiceClient.Protos";



package clientrental;

// The greeting service definition.
service Clients {
	// Sends a greeting
	rpc GetClientById (ClientRequestID) returns (ClientDTO);
	rpc GetClientByName (ClientRequestName) returns (ClientDTO);
	rpc GetAllClient (google.protobuf.Empty) returns (stream ClientDTO);

	rpc AddClient (ClientDTO) returns (google.protobuf.Empty);
}

// The request message containing the user's name.
message ClientRequestID {
	int32 id = 1;
}

message ClientRequestName {
	string name = 1;
}

// The response message containing the greetings.
message ClientDTO {
	string name = 1;
	string forName=2;
	string street=3;
	string nbr=4;
	string zip=5;
	string city=6;
	string country=7;
	string email=8;
	string tel=9;
	string idCarNbr=10;
	google.protobuf.Timestamp birthDate=11;
	string drivinglicence=12;
	int32 iD=13;
	
}



